@@ -1,3 +1,10 @@
+2015-02-03  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/12365
+	PR ld/14272
+	* elflink.c (_bfd_elf_fix_symbol_flags): Mark the plugin symbol
+	undefined if it is referenced from a non-IR file.
+
 2015-02-03  Nick Clifton  <nickc@redhat.com>
 
 	PR binutils/17512
